@@ -2,8 +2,8 @@
 
 # If we are on platforms other than Win32 or Cygwin,
 # exit now. This should play nice for CPAN testers
-use lib inc;
-use Devel::AssertOS qw(MicrosoftWindows MSWin32 Cygwin);
+my $running_on_windows = $^O eq 'MSWin32' || $^O eq 'cygwin';
+die qq(OS unsupported\n) unless $running_on_windows;
 
 use ExtUtils::MakeMaker;
 WriteMakefile(
@@ -32,6 +32,12 @@ WriteMakefile(
 
     # One day, I'd like to restore the dynamic API_test.dll
     #'clean' => {FILES => 'API_test.dll API_test_dll/Release/*'},
+
+    (
+        eval "$ExtUtils::MakeMaker::VERSION" >= 6.10_03
+            ? ( 'NO_META' => 1 )
+            : ()
+    )
 );
 
 # We must "chmod +x API_test.dll", or cygwin users see test suite fail
